--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "solana-account-scrapper",
-  "version": "1.0.0",
-  "description": "",
+  "name": "spl-token-holders-scraper",
+  "version": "2.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "clean": "rimraf dist/"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@solana/spl-token": "^0.4.6",
-    "@solana/web3.js": "^1.91.7",
-    "chalk": "^5.3.0",
-    "cli-progress": "^3.12.0",
-    "xlsx": "^0.18.5"
+  "license": "",
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.13.5",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.3"
   }
 }
