--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@types/node": "^22.13.5",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@solana/kit": "^2.1.0",
+    "@solana/spl-token": "^0.4.12"
   }
 }
