config files modified

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "clean": "rimraf dist/"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "",
@@ -14,10 +15,12 @@
   "devDependencies": {
     "@types/node": "^22.13.5",
     "rimraf": "^6.0.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@solana/errors": "^2.1.0",
     "@solana/kit": "^2.1.0",
-    "@solana/spl-token": "^0.4.12"
+    "@solana/spl-token": "^0.4.12",
+    "p-limit": "^6.2.0"
   }
 }
