--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "",
   "description": "",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^22.13.5",
     "@types/sqlite3": "^3.1.11",
     "rimraf": "^6.0.1",
@@ -25,6 +26,7 @@
     "@solana/spl-token": "^0.4.12",
     "@types/better-sqlite3": "^7.6.12",
     "better-sqlite3": "^11.8.1",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "sqlite3": "^5.1.7"
   }
